fixed images aligned

--- a/app/assets/stylesheets/landing-page.css.scss
+++ b/app/assets/stylesheets/landing-page.css.scss
@@ -276,3 +276,9 @@ p.copyright {
   top: 50%;
   transform: translateY(-50%);
 }
+
+.img-responsive-basket {
+    position: relative;
+    bottom: -80px;
+    left: 5px;
+   }
